integración primer-landing.html y css

--- a/primer-landing.html
+++ b/primer-landing.html
@@ -1,101 +1,125 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Jacqueline Báez - Primer Landing</title>
-    <link rel="icon" type="image/png" href="assets/img/favicon-jb-16x16.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
-        integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <title>Healthy Food</title>
+    <link rel="icon" type="image/png" href="assets/img/favicon-primer-landing-16x16.png">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/primer-landing.css">
 </head>
 
 <body>
-    <header>
-        <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-lg navbar-light backgry px-4 py-2">
-            <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">JACQUELINE <span class="white">BÁEZ</span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portafolio.html"> <i class="fas fa-portrait"></i> Portafolio</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="far fa-file-code"></i>
-                      Trabajos
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="primer-landing.html #scrollspyCurriculumvitae">Proyecto 1 - Primer Landing</a></li>
-                      <li><a class="dropdown-item" href="iguana-page.html">Proyecto 2 - Iguana Page</a></li>
-                      <li><a class="dropdown-item" href="cuppon.html">Proyecto 3 - Cuppon</a></li>
-                    </ul>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="servicios.html"> <i class="fas fa-briefcase"></i> Servicios</a> 
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacto.html"> <i class="fas fa-phone"></i> Contacto</a>
-                </li>
-                </ul>
-            </div>
-            </div>
-        </nav>
-    </header>
+    <div class="header">
+        <h1>Healthy <strong>Food</strong></h1>
+        <p>Comida saludable en base a verduras</p>
+    </div>
 
-    <section class="hero-1 text-center py-5 mt-0">
-        <div class="container">
-            <div class="ms-auto col-12 col-md-12 px-4">
-                <h1 class="pt-2 my-5 grey">
-                    Proyecto <br> <span class="fw-bold yellow">Nº1</span>
-                </h1>
-            </div>
-        </div>
-    </section>
+    <p class="phrases">
+        "No tienes que cocinar elegantes recetas gourmet, solo cocina comida proveniente de ingredientes frescos"
+    </p>
 
-    <main>
-        <!-- NAVLINK -->
-        <nav class="nav px-4 backgr justify-content-evenly sticky-top">
-            <a class="nav active class-nav py-4 px-3" aria-current="page" href="#scrollspyCurriculumvitae">Primer Landing</a>
-            <a class="nav class-nav py-4 px-3" href="iguana-page.html">Iguana Page</a>
-            <a class="nav class-nav py-4 px-3" href="cuppon.html">Cuppon</a>
-        </nav>
+    <div class="products">
+        <table class="separation">
+            <ul>
+            <tr>
+                <td><img src="assets/img/photo-ensalada-1.jpg" alt="ensalada pasta"></td>
+                <td> 
+                    <li class="textbig">Ensalada a la <strong>Pasta</strong></li>
+                    <p class="grey">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Maiores totam, nemo facilis similique quaerat et perspiciatis 
+                    vitae ipsam dicta ratione laboriosam repellat atque excepturi 
+                    quibusdam optio at id eligendi saepe.</p>
+                    <p class="italic">$11.990</p>
+                    <p class="bold"><strong>Ingredientes:</strong></p>
+                    <ol>
+                        <li>Lechuga escarola cortada (1 unidad)</li>
+                        <li>Pimentón rojo (1 unidad)</li>
+                        <li>Palta (1/2 unidad)</li>
+                        <li>Zanahoria (1/2 unidad)</li>
+                        <li>Rábano (1 unidad)</li>
+                        <li>Limón (2 unidades)</li>
+                    </ol>
+                </td>
+            </tr>
 
-        <!-- CV -->
-        <section class="cv text-center px-5 mx-3 pb-5">
-            <h2 id="scrollspyCurriculumvitae" class="display-3 padd-section">Primer <span class="fw-bold yellow">Landing >></span></h2>
-            <img class="container" src="assets/img/2022-01-12-00.08.57.png" alt="">
-        </section>
-    </main>
+            <tr>
+                <td>
+                    <li class="textbig">Ensalada a la <strong>Caprese</strong></li>
+                    <p class="grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Consequuntur illum dignissimos, fuga veritatis tempora corporis 
+                    perferendis quis eius animi voluptate, cumque sapiente suscipit 
+                    aliquid hic. Dicta voluptates molestiae eius est.</p>
+                    <p class="italic">$12.990</p>
+                    <p class="bold"><strong>Ingredientes:</strong></p>
+                    <ol>
+                        <li>Porotos verdes (100 gr)</li>
+                        <li>Tomate cherry (6 unidades)</li>
+                        <li>Pimentón amarillo (1/2 unidad)</li>
+                        <li>Tomate picado en cuadros (2 unidades)</li>
+                        <li>Cebolla corte pluma (1/2 unidad)</li>
+                        <li>Limón (1 unidad)</li>
+                    </ol>
+                </td>
+                <td><img src="assets/img/photo-ensalada-2.jpg" alt="ensalada caprese"></td>
+            </tr>
 
-    <!-- FOOTER -->
-    <footer class="backgry text-center p-5 grey">
-        <p class="fw-bold fs-4" href="#">JACQUELINE <span class="white">BÁEZ</span></p>
-        <p class="mt-2 mb-1 pb-3"><i class="far fa-copyright"></i> Jacqueline Báez 2022. Todos los derechos reservados.</p>
-        <div class="grey mb-2">
-            <i class="fab fa-linkedin-in px-2 fa-2x"></i><a href="https://www.linkedin.com/in/jacqueline-báez-camus-017156205/" target="_blank" rel="noopener noreferrer">Linkedin</a>
-            <i class="fab fa-github px-2 fa-2x"></i><a href="https://github.com/Fiorelotto" target="_blank" rel="noopener noreferrer">Github</a>
-        </div>
-    </footer>
+            <tr>
+                <td><img src="assets/img/photo-ensalada-3.jpg" alt="ensalada waldorf"></td>
+                <td>
+                    <li class="textbig">Ensalada a la <strong>Waldorf</strong></li>
+                    <p class="grey">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Fugiat tenetur iure ad maiores totam minus et, temporibus numquam 
+                    exercitationem id veritatis mollitia sit harum quod repellendus 
+                    facere eius, ratione autem!</p>
+                    <p class="italic">$7.990</p>
+                    <p class="bold"><strong>Ingredientes:</strong></p>
+                    <ol>
+                        <li>Tomate picado en cuadros (1 unidad)</li>
+                        <li>Cebolla corte pluma (1/2 unidad)</li>
+                        <li>Cilantro (4 unidades)</li>
+                        <li>Limón (1 unidad)</li>
+                    </ol>
+                </td>
+            </tr>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous">
-    </script>
+            <tr>
+                <td>
+                    <li class="textbig">Ensalada a la <strong>Olivier</strong></li>
+                    <p class="grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Molestiae ab deserunt quo iure harum est ducimus sit minus iste,
+                    voluptatibus dolorem nihil, esse a expedita assumenda incidunt. 
+                    Totam, corporis doloribus?</p>
+                    <p class="italic">$8.990</p>
+                    <p class="bold"><strong>Ingredientes:</strong></p>
+                    <ol>
+                        <li>Lechuga cortada (1 unidad)</li>
+                        <li>Porotos verdes (50 gr)</li>
+                        <li>Dientes de dragón (100 gr)</li>
+                        <li>Cilantro (4 unidades)</li>
+                        <li>Limón (1 unidad)</li>
+                    </ol>
+                </td>
+                <td><img src="assets/img/photo-ensalada-4.jpg" alt="ensalada olivier"></td>
+            </tr>
+
+            </ul>
+
+        </table>
+    </div>
+    
+<p></p>
+
+<div class="accesshtml">
+    <a href="table.html" class="accesshtml">Tabla de Nutrición</a>
+</div>
+
+<p></p>
+
+<div class="footer"> Contáctanos al +569 9767 6745 y en redes por @HealthyFood </div>
+
+<img src="assets/img/ensalada-lechuga.png" alt="lechuga" width="100%">
+
 </body>
-
 </html>
