target blank para proyectos

--- a/contacto.html
+++ b/contacto.html
@@ -40,9 +40,9 @@
                       Trabajos
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="primer-landing.html">Proyecto 1 - Primer Landing</a></li>
-                      <li><a class="dropdown-item" href="iguana-page.html">Proyecto 2 - Iguana Page</a></li>
-                      <li><a class="dropdown-item" href="cuppon.html">Proyecto 3 - Cuppon</a></li>
+                      <li><a class="dropdown-item" href="primer-landing.html" target="_blank">Proyecto 1 - Primer Landing</a></li>
+                      <li><a class="dropdown-item" href="iguana-page.html" target="_blank">Proyecto 2 - Iguana Page</a></li>
+                      <li><a class="dropdown-item" href="cuppon.html" target="_blank">Proyecto 3 - Cuppon</a></li>
                     </ul>
                   </li>
                 <li class="nav-item">
