--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="far fa-file-code"></i>
-                      Trabajos
+                      Proyectos
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="primer-landing.html">Proyecto 1 - Primer Landing</a></li>
-                      <li><a class="dropdown-item" href="iguana-page.html">Proyecto 2 - Iguana Page</a></li>
-                      <li><a class="dropdown-item" href="cuppon.html">Proyecto 3 - Cuppon</a></li>
+                      <li><a class="dropdown-item" href="primer-landing.html" target="_blank">Proyecto 1 - Primer Landing</a></li>
+                      <li><a class="dropdown-item" href="iguana-page.html" target="_blank">Proyecto 2 - Iguana Page</a></li>
+                      <li><a class="dropdown-item" href="cuppon.html" target="_blank">Proyecto 3 - Cuppon</a></li>
                     </ul>
                   </li>
                 <li class="nav-item">
