--- a/portafolio.html
+++ b/portafolio.html
@@ -37,12 +37,12 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="far fa-file-code"></i>
-                      Trabajos
+                      Proyectos
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="primer-landing.html">Proyecto 1 - Primer Landing</a></li>
-                      <li><a class="dropdown-item" href="iguana-page.html">Proyecto 2 - Iguana Page</a></li>
-                      <li><a class="dropdown-item" href="cuppon.html">Proyecto 3 - Cuppon</a></li>
+                      <li><a class="dropdown-item" href="primer-landing.html" target="_blank">Proyecto 1 - Primer Landing</a></li>
+                      <li><a class="dropdown-item" href="iguana-page.html" target="_blank">Proyecto 2 - Iguana Page</a></li>
+                      <li><a class="dropdown-item" href="cuppon.html" target="_blank">Proyecto 3 - Cuppon</a></li>
                     </ul>
                   </li>
                 <li class="nav-item">
@@ -71,7 +71,7 @@
         <!-- NAVLINK -->
         <nav class="nav px-4 backgr justify-content-evenly sticky-top">
             <a class="nav active class-nav p-4" aria-current="page" href="#scrollspySobremi">Sobre mí</a>
-            <a class="nav class-nav p-4" href="#scrollspyMistrabajos">Mis trabajos</a>
+            <a class="nav class-nav p-4" href="#scrollspyMisproyectos">Mis proyectos</a>
             <a class="nav class-nav p-4" href="#scrollspyContactame">Contáctame</a>
         </nav>
 
@@ -119,9 +119,9 @@
 
         <section class="backgry p-2 mt-3"></section>
 
-        <!-- MIS TRABAJOS-->
-        <section class="mis-trabajos px-5 text-center">
-            <h2 id="scrollspyMistrabajos" class="display-4 text-center mb-5 grey padd-section">Mis <span class="fw-bold yellow">trabajos >></span></h2>
+        <!-- MIS PROYECTOS-->
+        <section class="mis-proyectos px-5 text-center">
+            <h2 id="scrollspyMisproyectos" class="display-4 text-center mb-5 grey padd-section">Mis <span class="fw-bold yellow">proyectos >></span></h2>
 
             <div class="row">
                 <div class="col-12 col-sm-4 py-2 pb-5">
@@ -132,7 +132,7 @@
                             <p class="card-text pb-3">
                                 Creación de Proyecto Healthy Food, utilizando CSS, en hojas de estilo externas a html. Landing Page con estructura básica en el cual se utilizaron divs, etiquetas semánticas como header, section y footer.
                             </p>
-                            <a class="btn btn-warning fw-bold mb-3 px-4 white" href="primer-landing.html" role="button">Ver más</a>
+                            <a class="btn btn-warning fw-bold mb-3 px-4 white" href="primer-landing.html" target="_blank" role="button">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                             <p class="card-text pb-3">
                                 Creación de Proyecto Iguana Page, utilizando CSS y estructura de etiquetas semánticas. El enfoque del proyecto se enfocó en utilizar de manera adecuada la propiedad display y modelo de cajas.
                             </p>
-                            <a class="btn btn-warning fw-bold mb-3 px-4 white" href="iguana-page.html" role="button">Ver más</a>
+                            <a class="btn btn-warning fw-bold mb-3 px-4 white" href="iguana-page.html" target="_blank" role="button">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                             <p class="card-text pb-3">
                                 Creación de Proyecto Cuppon, utilizando Bootstrap y CSS. El enfoque de este proyecto consistió en construir un Landing Page de forma responsiva, pudiendo verse en teléfono y computador.
                             </p>
-                            <a class="btn btn-warning fw-bold mb-3 px-4 white" href="cuppon.html" role="button">Ver más</a>
+                            <a class="btn btn-warning fw-bold mb-3 px-4 white" href="cuppon.html" target="_blank" role="button">Ver más</a>
                         </div>
                     </div>
                 </div>
