descripción en servicios.html

--- a/servicios.html
+++ b/servicios.html
@@ -59,6 +59,18 @@
 
     <main>
         <h2 class="display-4 text-center mb-5 grey padd-section">Mis <span class="fw-bold yellow">servicios >></span></h2>
+
+            <p class="my-4 pb-4 text-center">
+                Durante mis años de estudios adquirí <span class="fw-bold">diversos conocimientos</span> esto me permite desenvolverme en diversas <span class="fw-bold">áreas de diseño</span>. 
+                <br>
+                Actualmente me encuentro aprendiendo cada día más <span class="fw-bold">del área de Diseño Web,</span> dentro de la sección de portafolio, puedes <span class="fw-bold">revisar los primeros proyectos</span> que desarrollé.
+                <br>
+                En cuanto al <span class="fw-bold">área de Diseño Digital y Análogo, </span>siempre estoy <span class="fw-bold">realizando trabajos freelance</span> de diversas piezas gráficas.
+                <br>
+                En el <span class="fw-bold">área de Producción Gráfica, </span> puedo encargarme de <span class="fw-bold"> llevar tus piezas gráficas de lo intangible a lo tangible,</span> 
+                <br>
+                recomendándote los mejores materiales y terminaciones, <span class="fw-bold"> en base a tu proyecto.</span> 
+            </p>
         <!-- ACCORDION -->
         <div class="px-5 p-2 pb-5 mb-5">
             <div class="accordion" id="accordionPanelsStayOpenExample">
