--- a/portafolio.html
+++ b/portafolio.html
@@ -71,8 +71,8 @@
         <!-- NAVLINK -->
         <nav class="nav px-4 backgr justify-content-evenly sticky-top">
             <a class="nav active class-nav p-4" aria-current="page" href="#scrollspySobremi">Sobre mí</a>
-            <a class="nav class-nav p-4" href="#scrollspyMisproyectos">Mis proyectos</a>
-            <a class="nav class-nav p-4" href="#scrollspyContactame">Contáctame</a>
+            <a class="nav class-nav p-4" href="#scrollspyMisproyectos">Mis Proyectos</a>
+            <a class="nav class-nav p-4" href="#scrollspyContacto">Contacto</a>
         </nav>
 
         <!-- SOBRE MI -->
@@ -168,7 +168,7 @@
         <!-- FORM CONTACTO-->
         <section class="contacto backgr pb-5 px-5">
 
-            <h2 id="scrollspyContactame" class="display-4 fw-bold text-center yellow padd-section">Contáctame >></h2>
+            <h2 id="scrollspyContacto" class="display-4 fw-bold text-center yellow padd-section">Contacto >></h2>
             <p class="text-center my-4">Si te interesa <span class="fw-bold yellow">realizar un proyecto conmigo</span> y conocer los valores de mi servicio, <span class="fw-bold yellow">¡Escríbeme!</span></p>
 
             <form>
