seccion educacion responsive y background al boton portafolio

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                     <p class="my-5 fs-5">
                         <span class="yellow"><i class="fas fa-quote-left"></i></span> <span class="fw-italic"></span> El optimismo firme y paciente siempre rinde sus frutos <span class="yellow"><i class="fas fa-quote-right"></i></span>
                     </p>
-                    <div class="mb-5 pb-2">
-                        <a class="btn btn-outline-warning btn-lg me-4" href="portafolio.html" role="button">Portafolio</a>
+                    <div class="portafolio1 mb-5 pb-2">
+                        <a class="btn btn-outline-warning btn-lg me-4" style="background-color: rgb(56, 55, 54);" href="portafolio.html" role="button">Portafolio</a>
                         <a class="btn btn-warning btn-lg text-dark" href="contacto.html" role="button">Contáctame</a>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
             </p>
 
             <div class="row py-4 px-3">
-                <div class="col-12 col-md-3 px-4">
+                <div class="col-12 col-xl-3 col-md-6 px-4">
                     <i class="fas fa-laptop fa-3x my-3 yellow"></i>
                     <h3 class="my-3 fw-bold yellow">Estudios</h3>
                     <ul>
@@ -132,7 +132,7 @@
                         <li>Diseño UX / UI - 2022 (cursando)</li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-3 px-4">
+                <div class="col-12 col-xl-3 col-md-6 px-4">
                     <i class="fas fa-pen-alt fa-3x my-3 yellow"></i>
                     <h3 class="my-3 fw-bold yellow">Cursos</h3>
                     <ul>
@@ -141,7 +141,7 @@
                         <li>Curso Fundamentos Desarrolo Web en Desafío Latam (2022)</li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-3 px-4">
+                <div class="col-12 col-xl-3 col-md-6 px-4">
                     <i class="fab fa-adobe fa-3x my-3 yellow"></i>
                     <h3 class="my-3 fw-bold yellow">Software Diseño</h3>
                     <ul>
@@ -152,7 +152,7 @@
                         <li>Sketchup</li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-3 px-4">
+                <div class="col-12 col-xl-3 col-md-6 px-4">
                     <i class="fas fa-terminal fa-3x my-3 yellow"></i>
                     <h3 class="my-3 fw-bold yellow">Software Web</h3>
                     <ul>
